[package]
name = "scatter-net-neon"
version = "0.1.0-1"
authors = ["Prokop Schield"]
edition = "2024"
description = "Node.js bindings for scatter-net"
license = "GPL-3.0-or-later"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.1"
